fix: 修复音乐歌手查询接口